crates/rymx/tests/errors/comments.rym
/* Test */ */

// TODO add more test cases
